--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,37 +1,37 @@
 url: https://ds4owd-dev.github.io/quiz/
-
 template:
   bootstrap: 5
   bootswatch: sandstone
-  
 home:
-  title: "openwashdata Quizzes"
-  description: "Interactive quizzes for learning openwashdata package development"
-  
+  title: openwashdata Quizzes
+  description: Interactive quizzes for learning openwashdata package development
 navbar:
   structure:
-    left:  [home, quizzes, reference]
-    right: [github]
+    left:
+    - home
+    - quizzes
+    - reference
+    right: github
   components:
     home:
       icon: fa-home
       href: index.html
     quizzes:
-      text: "Quizzes"
+      text: Quizzes
       menu:
-      - text: "Module 1: Quarto Basics"
+      - text: 'Module 1: Quarto Basics'
         href: md-01-quiz.html
-      - text: "-------"
-      - text: "Coming Soon"
-      - text: "Module 2: Package Structure"
-      - text: "Module 3: Data Documentation"
-      - text: "Module 4: pkgdown Customization"
-      - text: "Module 5: GitHub Actions"
+      - text: '-------'
+      - text: Coming Soon
+      - text: 'Module 2: Package Structure'
+      - text: 'Module 3: Data Documentation'
+      - text: 'Module 4: pkgdown Customization'
+      - text: 'Module 5: GitHub Actions'
     github:
       icon: fa-github
       href: https://github.com/ds4owd-dev/quiz
-      
 footer:
   structure:
     left: developed_by
     right: built_with
+
