--- a/.github/workflows/deploy-quiz.yml
+++ b/.github/workflows/deploy-quiz.yml
@@ -19,19 +19,16 @@ jobs:
       - name: Setup R
         uses: r-lib/actions/setup-r@v2
         with:
-          r-version: '4.3.2'
+          r-version: '4.4.0'
           use-public-rspm: true
           
       - name: Setup Pandoc
         uses: r-lib/actions/setup-pandoc@v2
         
-      - name: Restore renv packages
-        uses: r-lib/actions/setup-renv@v2
-        
-      - name: Install deployment dependencies
-        run: |
-          install.packages("rsconnect")
-        shell: Rscript {0}
+      - name: Install dependencies from DESCRIPTION
+        uses: r-lib/actions/setup-r-dependencies@v2
+        with:
+          dependencies: '"hard"'  # Install Imports, Depends, LinkingTo
         
       - name: Configure rsconnect authentication
         run: |
