--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,9 +16,16 @@ Imports:
     tidyverse,
     gapminder,
     gt,
-    gradethis
+    gradethis,
+    learnrhash,
+    httr,
+    knitr,
+    rmarkdown,
+    shiny,
+    bslib,
+    rsconnect
 Suggests:
-    pkgdown,
-    quarto
+    pkgdown
 Remotes:
-    rstudio/gradethis
+    rstudio/gradethis,
+    rundel/learnrhash
