--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,7 @@ URL: https://github.com/ds4owd-dev/quiz,
 BugReports: https://github.com/ds4owd-dev/quiz/issues
 Imports:
     learnr,
-    tidyverse,
+    dplyr,
     gapminder,
     gt,
     gradethis,
